# Sift

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  OPTIMIZATION_CHANGELOG.md  README.md  STATE.md  alembic.ini  pyproject.toml  render.yaml  sift.toml.example
.github/workflows/: ci.yml
backend/sift/: __init__.py  cli.py  config.py  main.py
backend/sift/actions/: __init__.py  engine.py  radarr_writes.py
backend/sift/ai/: __init__.py  anthropic.py  musthave.py  ollama.py  provider.py  query.py  registry.py  review.py
backend/sift/analysis/: __init__.py  classify.py  collections.py  junk.py  profile.py  recommend.py  scoring.py  upgrades.py
backend/sift/api/: __init__.py  deps.py  routes_actions.py  routes_analysis.py  routes_ask.py  routes_auth.py  routes_config.py  routes_export.py  routes_health.py  routes_movies.py  routes_musthave.py  routes_posters.py  routes_profile.py  routes_review.py  routes_scan.py  routes_settings.py  schemas.py  ws.py
backend/sift/clients/: __init__.py  base.py  overseerr.py  plex.py  radarr.py  tautulli.py  tmdb.py
backend/sift/data/: curated_seed.py  tmdb_genres.py
backend/sift/db/: __init__.py  models.py  session.py
backend/sift/services/: audit.py  (+16 more)
backend/tests/: conftest.py  test_actions_safety.py  test_ai.py  test_analysis.py  test_api.py  test_auth.py  test_autoscan.py  test_canon.py  test_classify.py  test_clients.py  test_clients_base.py  test_config.py  test_config_store.py  test_curated_lists.py  test_models.py  test_musthave.py  test_normalize.py  test_pipeline.py  test_posters.py  test_profile.py  test_radarr_add.py  test_recommend.py  test_review.py  test_scanner.py  test_scoring.py  test_secretbox.py  test_settings.py
docs/: DEPLOY.md  GAME_PLAN.md  SETUP.md
docs/design/: HANDOFF.md  Sift.prototype.html
docs/optimization/: CYCLE_01.md  CYCLE_02.md  CYCLE_03.md  CYCLE_04.md  CYCLE_05.md  CYCLE_06.md  CYCLE_07.md  CYCLE_08.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
(+51 files in other folders)
