[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sift"
# Version scheme: YYMM.major.patch  (see CLAUDE.md / CHANGELOG.md)
version = "2607.0.1"
description = "Sift — a portable metadata brain that analyzes a Plex + Radarr library to find missing movies and flag removals."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "holyscotsman" }]
keywords = ["plex", "radarr", "tautulli", "tmdb", "media", "library", "curation"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
# AI provider layer is Phase 2 — kept out of the default install so the MVP
# stays lightweight. The runtime never uses AI to decide correctness (see CLAUDE.md).
ai = [
    "anthropic>=0.25",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
sift = "sift.cli:main"

[project.urls]
Homepage = "https://github.com/holyscotsman/Sift"

[tool.hatch.build.targets.wheel]
packages = ["backend/sift"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts callables in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.mypy]
python_version = "3.12"
packages = ["sift"]
mypy_path = "backend"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true
